--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapa Interativo da Europa - Espaço Schengen e União Europeia</title>
+    <title>Espaço Schengen e União Europeia</title>
     
     <style>
         /* Estilos gerais */
