--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Mapa Interativo da Europa - Espaço Schengen e União Europeia</h1>
+        <h1>Países do Espaço Schengen e União Europeia</h1>
         
         <div class="map-container">
             <div id="tooltip" class="tooltip"></div>
